added more section

--- a/index.html
+++ b/index.html
@@ -493,6 +493,264 @@ There are a number of so-called 'experts' giving conflicting advice on nutrition
             What to do when speaking to your doctor about your health.
             And much more</div>
         </section>
+        <section id="team" class="pb-5">
+          <div class="container">
+              <h5 class="section-title h1">Meet The Experts Behind The Stavrou Method</h5>
+              <div class="row">
+                  <!-- Team member -->
+                  <div class="col-xs-12 col-sm-6 col-md-4">
+                      <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+                          <div class="mainflip">
+                              <div class="frontside">
+                                  <div class="card">
+                                      <div class="card-body text-center">
+                                          <p><img class=" img-fluid" src="./img/George.jpg" alt="card image"></p>
+                                          <h4 class="card-title">George Stavrou<br>Owner</h4>
+                                          <p class="card-text"> Certified personal trainer and lifestyle & weight management consultant
+                                            </p>
+                                          <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                                      </div>
+                                  </div>
+                              </div>
+                              <div class="backside">
+                                  <div class="card">
+                                      <div class="card-body text-center mt-4">
+                                          <h4 class="card-title">George Stavrou</h4>
+                                          <p class="card-text">#1 best-selling author of "How YOU Can Sculpt A Leaner, Healthier Body In 12 Weeks: A Guide For Beginners!"<br>
+                                            Author for prestigious publications like Intense Fitness, AtoZ Fitness, Gen-Mag, and American Health and Fitness</p>
+                                          <ul class="list-inline">
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-facebook"></i>
+                                                  </a>
+                                              </li>
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-twitter"></i>
+                                                  </a>
+                                              </li>
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-skype"></i>
+                                                  </a>
+                                              </li>
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-google"></i>
+                                                  </a>
+                                              </li>
+                                          </ul>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <!-- ./Team member -->
+                  <!-- Team member -->
+                  <div class="col-xs-12 col-sm-6 col-md-4">
+                      <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+                          <div class="mainflip">
+                              <div class="frontside">
+                                  <div class="card">
+                                      <div class="card-body text-center">
+                                          <p><img class=" img-fluid" src="./img/JP.jpg" alt="card image"></p>
+                                          <h4 class="card-title">John Paul<br> Catanzaro Exercise Program Design</h4>
+                                          <p class="card-text">CSEP Certified Exercise Physiologist with a Specialized Honours Bachelor of Science degree in Kinesiology and Health Science
+                                            </p>
+                                          <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                                      </div>
+                                  </div>
+                              </div>
+                              <div class="backside">
+                                  <div class="card">
+                                      <div class="card-body text-center mt-4">
+                                          <h4 class="card-title">John Paul</h4>
+                                          <p class="card-text">Owns and operates a private training facility in Richmond Hill, Ontario
+                                            Author of The Elite Trainer (2011), and has released two DVDs, Stretching for Strengthening (2003) and Warm-Up to Strength Training (2005), which have sold copies worldwide
+                                            A premier trainer in Canada forming The Catanzaro Group which provides various health and fitness services with divisions in fitness, nutrition, supplements, lifestyle, seminars, and publishing</p>
+                                          <ul class="list-inline">
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-facebook"></i>
+                                                  </a>
+                                              </li>
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-twitter"></i>
+                                                  </a>
+                                              </li>
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-skype"></i>
+                                                  </a>
+                                              </li>
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-google"></i>
+                                                  </a>
+                                              </li>
+                                          </ul>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <!-- ./Team member -->
+                  <!-- Team member -->
+                  <div class="col-xs-12 col-sm-6 col-md-4">
+                      <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+                          <div class="mainflip">
+                              <div class="frontside">
+                                  <div class="card">
+                                      <div class="card-body text-center">
+                                          <p><img class=" img-fluid" src="./img/MauroB.jfif" alt="card image"></p>
+                                          <h4 class="card-title">Dr. Mauro Di Pasquale <br>Supplementation Program and Design</h4>
+                                          <p class="card-text">Formulated radical, scientifically validated nutritional supplements</p>
+                                          <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                                      </div>
+                                  </div>
+                              </div>
+                              <div class="backside">
+                                  <div class="card">
+                                      <div class="card-body text-center mt-4">
+                                          <h4 class="card-title">Dr. Mauro Di Pasquale </h4>
+                                          <p class="card-text">Formulated a new group of nutritional supplements meant to combat nighttime post absorptive catabolism and enhance the anabolic and recuperative effects of sleep
+                                            Currently working on developing specific advanced nutriceuticals</p>
+                                          <ul class="list-inline">
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-facebook"></i>
+                                                  </a>
+                                              </li>
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-twitter"></i>
+                                                  </a>
+                                              </li>
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-skype"></i>
+                                                  </a>
+                                              </li>
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-google"></i>
+                                                  </a>
+                                              </li>
+                                          </ul>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <!-- ./Team member -->
+                  <!-- Team member -->
+                  <div class="col-xs-12 col-sm-6 col-md-4">
+                      <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+                          <div class="mainflip">
+                              <div class="frontside">
+                                  <div class="card">
+                                      <div class="card-body text-center">
+                                          <p><img class=" img-fluid" src="./img/EricB.jfif" alt="card image"></p>
+                                          <h4 class="card-title">Dr. Eric Serrano <br> Nutrition Consultant</h4>
+                                          <p class="card-text">Sought-after consultant dealing with elite athletes on a global scale</p>
+                                          <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                                      </div>
+                                  </div>
+                              </div>
+                              <div class="backside">
+                                  <div class="card">
+                                      <div class="card-body text-center mt-4">
+                                          <h4 class="card-title">Dr. Eric Serrano <br>Nutrition Consultant</h4>
+                                          <p class="card-text">Specializes in cutting edge training, supplementation, nutrition, injury rehabilitation and performance enhancement<br>
+                                            Advocates prevention and cure of health problems through proper nutrition. Minimal, rare use of drugs and medication in his practice</p>
+                                          <ul class="list-inline">
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-facebook"></i>
+                                                  </a>
+                                              </li>
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-twitter"></i>
+                                                  </a>
+                                              </li>
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-skype"></i>
+                                                  </a>
+                                              </li>
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-google"></i>
+                                                  </a>
+                                              </li>
+                                          </ul>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <!-- ./Team member -->
+                  <!-- Team member -->
+                  <div class="col-xs-12 col-sm-6 col-md-4">
+                      <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+                          <div class="mainflip">
+                              <div class="frontside">
+                                  <div class="card">
+                                      <div class="card-body text-center">
+                                          <p><img class=" img-fluid" src="./img/Dr BakerC.jpg" alt="card image"></p>
+                                          <h4 class="card-title">Dr. Larry Baker <br> Physician</h4>
+                                          <p class="card-text">Family physician with a personal clinic for over 25 years</p>
+                                          <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                                      </div>
+                                  </div>
+                              </div>
+                              <div class="backside">
+                                  <div class="card">
+                                      <div class="card-body text-center mt-4">
+                                          <h4 class="card-title">Dr. Larry Baker</h4>
+                                          <p class="card-text">Family physician with a personal clinic for over 25 years<br>
+                                            Provides necessary information for users to get the appropriate tests done to ensure optimum health levels
+                                            </p>
+                                          <ul class="list-inline">
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-facebook"></i>
+                                                  </a>
+                                              </li>
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-twitter"></i>
+                                                  </a>
+                                              </li>
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-skype"></i>
+                                                  </a>
+                                              </li>
+                                              <li class="list-inline-item">
+                                                  <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                      <i class="fa fa-google"></i>
+                                                  </a>
+                                              </li>
+                                          </ul>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <!-- ./Team member -->
+                 
+      
+              </div>
+          </div>
+      </section>
     <footer>
 
     </footer>
